# Lisn

./: Makefile  README.md  install.sh  lisn_project_plan.md  pyproject.toml  uninstall.sh
lisn/: __init__.py  audio.py  cli.py  config.py  daemon.py  groq_client.py  hotkey.py  injector.py  process.py  service.py  widget.py
tests/: __init__.py
