[project]
name = "lisn"
version = "0.1.0"
description = "Push-to-talk voice dictation for Linux using Groq Cloud (Whisper + LLM)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Subhodip Roy"}
]
keywords = ["voice", "dictation", "linux", "groq", "whisper", "speech-to-text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
lisn = "lisn.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lisn"]
